--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="clock">00:00:00</h1>
     <p id="color">#000000</p>
-    <script src="clock.js"></script>
+    <script src="clock.js" async></script>
 </body>
 
 </html>
